--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         <section class="card_confiding">
         <div class="Confiding">
             <h2>Quá trình</h2>
-            <p>text</p>
+            <p>Quá trình tui làm trang web tới từ suy nghĩ : "mình bỏ học lập trình web vì thi được 1 tháng, có lẽ mình nên làm thôi " và sau đó tui nãy idea về web cho game pixel download nhưng khó vì lượng kiến thức ít ỏi do tui chỉ toàn học algorithm. Thế nên dồn đường cùng trong 1 tiếng đầu, nhưng vì khát khao muốn nỗ lực tạo project cuối cùng và nếu càng khó thì khi làm được=>good for ourself</p>
+
         </div>
         <div class="Confiding">
             <h2>Thực Hiện</h2>
-            <p>text</p>
-    
+            <p>Thực sự thú thật, 1 tiếng đầu tiên tui đã quên gần hết cơ bản và phải học lại nhưng càng tệ hơn khi bắt đầu thì tui đã sai liên tục dẫn đến nản. Tui bắt đầu nhắn cầu cứu bạn tui và do this is web design nên việc sửa lỗi khó chỉ với vài lời nhắn. Do đó tui buộc phải coi lại, học, thực hiện nó lặp liên tục quá trình và đổi thành project về 2023. Và do tui hứa rằng khi chưa xong thì chưa ngủ nên tui buộc phải làm được </p>
         </div>
         <div class="Confiding">
             <h2>Kết Quả</h2>
-            <p>text</p>
+            <p>Và sau 38 tiếng làm liên tục thì tui đã hoàn thành nó, cơ thể tui tưởng như đã chết vì chỉ ăn 1 cử duy nhất trong 2 ngày với cái giao diện như thế này. Đúng thật sự là tui làm lâu và tui cũng chưa thể làm nó tốt nhất, nhưng tui cũng tự hào vì ít nhất nó đã hoàn thành. Và đó tất cả quá trình tui thực hiện nó
         </div>
         </section>
 
