--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <a href="default"></a>
         </div>
         <div id="information_right">
-            <a href="#home">Home</a>
-            <a href="#Job">Job</a>
-            <a href="#About">About</a>
+            <a href="#home">Trần</a>
+            <a href="#Job">Tuấn</a>
+            <a href="#About">Minh</a>
         </div>
         <p class="clr"></p>
     </header>
